# hodlin

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
scripts/: check.sh
tests/: test_anomaly.py  test_composition.py  test_connectors.py  test_contracts.py  test_delivery.py  test_explanation.py  test_scheduler.py  test_sentiment_serving.py  test_store.py  test_workspace.py
tests/integration/: conftest.py  test_backfill.py  test_explain.py  test_jobs.py  test_migrations.py  test_notify.py  test_store_idempotency.py
